# sggoc

./: .gitignore  .gitmodules
doc/: block_diagram.dot  block_diagram.sh  block_diagram_external.dot  block_diagram_internal.dot  clean.sh  final_proposal.tex  objective_tree.dot  proposal.tex  update_10_05_2012.tex  update_10_19_2012.tex
doc/block_diagrams/: block_diagram_external.dot  block_diagram_external.py  block_diagram_full.dot  block_diagram_internal.dot  block_diagram_internal.py
doc/design/: design.tex  mapper.sh
doc/design_report/: design.tex  mapper.dot
doc/final_tdr/: final_tdr.tex
doc/first_tdr_slides/: design_slides.tex
doc/slides/: design_slides.tex
doc/weekly_updates/: update_05_20121102.tex  update_08_20121130.tex  update_09_20130125.tex  update_10_12_2012.tex  update_10_20130201.tex  update_10_26_2012.tex  update_11_09_2012.tex  update_11_20130201.tex  update_12_20130215.tex  update_13_20130301.tex  update_14_20121116.tex
fpga/rom_flasher/doc/: block_diagram_read.dot  block_diagram_write.dot  (+1 more)
fpga/sggoc/verilog/sim/gui/: .clang-format  .gitignore  CMakeLists.txt  README.md  gui.cpp  verilator.vlt
ref/altera_up_flash_memory/: Altera_UP_Flash_Memory_IP_Core_Avalon_Interface_hw.tcl
ref/emulator_dumps/: hexdump_command.txt
tools/Osmose-0-9-96-QT/: Joystick.h  Makefile  Osmose-0-9-96-QT.pro  OsmoseGUI.cpp  OsmoseGUI.h  main.cpp  print_log.cpp  print_log.h
tools/debug/: debug.py
tools/memsend/: read_mem.py  send_mem.py
tools/test_roms/: crt0.s  gg.c  gg.h
tools/vdp_render/: compile.sh  main.c  palette.c  run.sh  screen.c  tiles.c
(+125 files in other folders)
